<resources>
    <string name="app_name">Dev Community</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_gallery">Articles</string>
    <string name="menu_slideshow">Events</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_preferences">Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">LEARN </string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="todo">TODO</string>
    <string name="dialog_fire_missiles" />
    <string name="fire" />
    <string name="textview">TextView</string>

</resources>