<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="cat.urv.deim.asm.dev_comm.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_articles"
        android:name="cat.urv.deim.asm.dev_comm.ui.articles.ArticlesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_events"
        android:name="cat.urv.deim.asm.dev_comm.ui.events.EventsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_speakers"
        android:name="cat.urv.deim.asm.dev_comm.ui.speakers.SpeakersFragment"
        android:label="@string/menu_speakers"
        tools:layout="@layout/fragment_speakers" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="cat.urv.deim.asm.dev_comm.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_preferences"
        android:name="cat.urv.deim.asm.dev_comm.ui.preferences.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />
</navigation>